--- a/app/view/SellProductManager.ejs
+++ b/app/view/SellProductManager.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>试用平台 | 发布产品</title>
+    <title>试用平台 | 试用点评</title>
     <!-- Tell the browser to be responsive to screen width -->
     <!-- Bootstrap 3.3.7 -->
     <link rel="stylesheet" href="/public/adminLTE/bower_components/bootstrap/dist/css/bootstrap.min.css">
