--- a/app/view/menu/section.ejs
+++ b/app/view/menu/section.ejs
@@ -4,34 +4,44 @@
         <ul class="sidebar-menu" data-widget="tree">
             <!-- 导航按钮-->
             <li>
-                <a href="/public/adminLTE/pages/widgets.html">
+                <a href="/sell">
+                    <i class="fa fa-th"></i> <span>卖家中心</span>
+                    <span class="pull-right-container">
+            </span>
+                </a>
+            </li>
+            <li>
+                <a href="/sell/productpost">
                     <i class="fa fa-th"></i> <span>发布试用</span>
                     <span class="pull-right-container">
-              <small class="label pull-right bg-green">new</small>
+              <small class="label pull-right bg-green">Hot</small>
             </span>
                 </a>
             </li>
-            <!-- 导航按钮-->
-            <!-- 导航按钮-->
             <li>
-                <a href="/public/adminLTE/pages/widgets.html">
-                    <i class="fa fa-th"></i> <span>试用订单</span>
+                <a href="/sell/productcomment">
+                    <i class="fa fa-th"></i> <span>试用点评</span>
+                    <span class="pull-right-container">
+              <small class="label pull-right bg-green">Hot</small>
+            </span>
+                </a>
+            </li>
+
+
+            <li>
+                <a href="/sell/productmanager">
+                    <i class="fa fa-th"></i> <span>试用管理</span>
                     <span class="pull-right-container">
             </span>
                 </a>
             </li>
-            <!-- 导航按钮-->
-            <!-- 导航按钮-->
             <li>
-                <a href="/public/adminLTE/pages/widgets.html">
-                    <i class="fa fa-th"></i> <span>财务管理</span>
+                <a href="/sell/topup">
+                    <i class="fa fa-th"></i> <span>财富中心</span>
                     <span class="pull-right-container">
             </span>
                 </a>
             </li>
-            <!-- 导航按钮-->
-            <!-- 下面都是官方提供的button -->
-            <!-- sidebar menu: : style can be found in sidebar.less -->
         </ul>
     </section>
     <!-- /.sidebar -->
