--- a/app/view/menu/section.ejs
+++ b/app/view/menu/section.ejs
@@ -26,8 +26,14 @@
             </span>
                 </a>
             </li>
-
-
+            <li>
+                <a href="/sell/productcommentmanager">
+                    <i class="fa fa-th"></i> <span>点评管理</span>
+                    <span class="pull-right-container">
+              <small class="label pull-right bg-green">Hot</small>
+            </span>
+                </a>
+            </li>
             <li>
                 <a href="/sell/productmanager">
                     <i class="fa fa-th"></i> <span>试用管理</span>
