--- a/app/view/sellProductComment.ejs
+++ b/app/view/sellProductComment.ejs
@@ -27,7 +27,10 @@
     <!-- Theme style -->
     <link rel="stylesheet" href="/public/adminLTE/dist/css/AdminLTE.min.css">
     <link rel="stylesheet" href="/public/adminLTE/dist/css/skins/_all-skins.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" type="text/javascript"></script>
+    <script src="https://cdn.staticfile.org/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
+
+    <script type="text/javascript" src="https://unpkg.com/qiniu-js@2.3.0/dist/qiniu.min.js"></script>
+
     <script> 
 
     //获取店铺名
@@ -42,7 +45,6 @@
     }
     function urlgetshop(data){
         if(data!==null){
-            console.log(typeof data)
             $("#Selectshop").empty()
             $("#Selectshop").append("<option value='0'>选择店铺</option>")
             for (var AjaxSelectShopValue in data) {
@@ -52,10 +54,23 @@
         }
      }
 
+     //gettoken
+     function urlGetlToken(){
+        $(document).ready(function(){
+                         $.ajax({
+                             method:"get",
+                             url:'/m/qntoken',
+                             success: function(data, status) {
+                                 document.getElementById("token").value = data;
+                             }
+                            })
+                     })
+    }
+
     //获取店铺名
     window.onload = function(){
         ajaxGetshop()
-        window.setInterval(gettaskvalues, 1000);
+        urlGetlToken()
     }
      //自动计算数据
      //ajax get post product infomaition
@@ -81,10 +96,130 @@
          })
     }
     }
-     function gvalue(data){
+    function gvalue(data){
          console.log(data)
      }
-    </script>
+
+    function urlgetproduct(data){
+        console.log(data)
+        if(data!==0){
+         $(document).ready(function(){
+                 $.ajax({
+                     method:"POST",
+                     url:'/sell/getproduct',
+                     data: {shopid:data},
+                     success: function(data, status) {
+                         // Call this function on succes
+                        console.log("post result: ", data, status)
+                        if(data!==null){
+                            $("#SubSelectproduct").empty()
+                            $("#SubSelectproduct").append("<option value='0'>选择产品</option>")
+                            for (var N in data) {
+                                console.log(data[N].Details)
+                                var AjaxSsll = '<option value='+data[N].SellProductId+'>'+data[N].ProductId+' - '+JSON.parse(data[N].Details).name+'</option>'
+                               $("#SubSelectproduct").append(AjaxSsll)
+                            }}}})})}}
+
+    function urlgetproductid(data){
+        console.log(data)
+        if(data!==0){
+            $.ajax({
+                 method:"POST",
+                 url:'/sell/getproductid',
+                 data: {SellProductId:data},
+                 success: function(data, status){
+                     ProductSetInfo(data)
+                }
+            })
+
+        }
+     }
+
+    function ProductSetInfo(data){
+        console.log(data)
+        console.log(JSON.parse(data.Details).mainImage[0])
+        console.log(typeof data)
+        $("#productinfoimg").attr('src',JSON.parse(data.Details).mainImage[0]);
+        $("#productinfoID").attr('value',data.SellProductId);
+        $("#productinfoplatformID").attr('value',data.ProductId);
+        $("#infoplatform").text(data.ShopSort);
+        $("#infoproduct").text(JSON.parse(data.Details).name);
+     }
+
+
+    function clickqiniu(id){
+        var number = /[1-9]/.exec(id)[0]
+        var Qiniu_UploadUrl = "https://up-z2.qiniup.com";
+        var progressbar = $("#progressbar");
+        var token = $("#token").val();
+        //普通上传
+        var Qiniu_upload = function(f, token, key) {
+            var xhr = new XMLHttpRequest();
+            xhr.open('POST', Qiniu_UploadUrl, true);
+            var formData, startDate;
+            formData = new FormData();
+            formData.append('key', key);
+            formData.append('token', token);
+            formData.append('file', f);
+            var taking;
+            xhr.upload.addEventListener("progress", function(evt) {
+                if (evt.lengthComputable) {
+                    var nowDate = new Date().getTime();
+                    taking = nowDate - startDate;
+                    var x = (evt.loaded) / 1024;
+                    var y = taking / 1000;
+                    var uploadSpeed = (x / y);
+                    var formatSpeed;
+                    if (uploadSpeed > 1024) {
+                        formatSpeed = (uploadSpeed / 1024).toFixed(2) + "Mb\/s";
+                    } else {
+                        formatSpeed = uploadSpeed.toFixed(2) + "Kb\/s";
+                    }
+                    //图片上传值
+                    var percentComplete = Math.round(evt.loaded * 100 / evt.total);
+                    console.log(percentComplete+'id'+id)
+                    if(percentComplete ===100){
+                        url = 'http://img.zhess.com/'+key
+                        console.log('done 100'+id+url)
+                        document.getElementById('img'+number).src = url;
+                        document.getElementById('but'+number).value = url;
+                    }
+                }
+            }, false);
+
+            xhr.onreadystatechange = function(response) {
+                if (xhr.readyState == 4 && xhr.status == 200 && xhr.responseText != "") {
+                    var blkRet = JSON.parse(xhr.responseText);
+                    console && console.log(blkRet);
+                } else if (xhr.status != 200 && xhr.responseText) {
+
+                }
+            };
+            startDate = new Date().getTime();
+            $("#progressbar").show();
+            xhr.send(formData);
+        };
+        function randomIntFromInterval(min,max){
+            let result =  Math.floor(Math.random()*(max-min+1)+min);
+            if(result < min){
+                result = min;
+            }
+            else if(result > max){
+                result = max;
+            }
+            return result
+            }
+        if ($("#"+id)[0].files.length > 0) {
+            var key = new Date().getTime() +''+ randomIntFromInterval(10000,99999)+'.jpg'
+            Qiniu_upload($("#"+id)[0].files[0], token, key);
+        } else {
+            console && console.log("form input error");
+        }
+    }
+
+</script>
+
+
 
     <style>
         .UrlTitle {
@@ -112,11 +247,12 @@
     <div class="content-wrapper">
         <div class="box box-warning">
             <div class="box-header with-border">
-                <h3 class="box-title">首页</h3>
+                <h3 class="box-title">首页</h3><br>
+                <span style="color:red;"><%= message %></span><br>
             </div>
                 <!-- /.box-header -->
                 <div id='selectproductdiv'>
-                <form id="msform1" method="post" action="#">
+                <form method="post">
                 <strong style="color:mediumvioletred">类型：</strong>
                 <label><input type="radio" name="event" value="1" checked="checked" >
                     试用追评  </label>
@@ -133,58 +269,7 @@
                     <option value='0'>选择产品</option>
                 </select>   
                 </div>
-                <script>
-                     function urlgetproduct(data){
-                        console.log(data)
-                        if(data!==0){
-                         $(document).ready(function(){
-                                 $.ajax({
-                                     method:"POST",
-                                     url:'/sell/getproduct',
-                                     data: {shopid:data},
-                                     success: function(data, status) {
-                                         // Call this function on succes
-                                        console.log("post result: ", data, status)
-                                        if(data!==null){
-                                            $("#SubSelectproduct").empty()
-                                            $("#SubSelectproduct").append("<option value='0'>选择产品</option>")
-                                            for (var N in data) {
-                                                console.log(data[N].Details)
-                                                var AjaxSsll = '<option value='+data[N].SellProductId+'>'+data[N].ProductId+' - '+JSON.parse(data[N].Details).name+'</option>'
-                                               $("#SubSelectproduct").append(AjaxSsll)
-                                            }
-                                        }
-                                    }
-                                 })
-                         })
-                     }}
 
-                     function urlgetproductid(data){
-                        console.log(data)
-                        if(data!==0){
-                            $.ajax({
-                                 method:"POST",
-                                 url:'/sell/getproductid',
-                                 data: {SellProductId:data},
-                                 success: function(data, status){
-                                     ProductSetInfo(data)
-                                }
-                            })
-
-                        }
-                     }
-
-                     function ProductSetInfo(data){
-                        console.log(data)
-                        console.log(JSON.parse(data.Details).mainImage[0])
-                        console.log(typeof data)
-                        $("#productinfoimg").attr('src',JSON.parse(data.Details).mainImage[0]);
-                        $("#productinfoID").attr('value',data.SellProductId);
-                        $("#productinfoplatformID").attr('value',data.ProductId);
-                        $("#infoplatform").text(data.ShopSort);
-                        $("#infoproduct").text(JSON.parse(data.Details).name);
-                     }
-                </script>
                 <br/>
                 <div id='productinfomaitions'>
                <table class="table table-hover"><tbody>
@@ -200,32 +285,53 @@
                 </div>
             <div name="moneyClass">
                 <strong style="color:mediumvioletred">评价：</strong><br>
-                <textarea rows="5" cols="100" maxlength="200" id="txtGoodCommentWords"></textarea><br>
-                <strong style="color:mediumvioletred">图片：</strong><br>
-
-                <div class="task_upload floatLeft mr20">
-                        <div class="upload_box upload_img" id="upload3" style="visibility: hidden;">
-                            <span class="upload_del" id="uploader3"><a href="#this">删除</a></span>
-                        </div>
-                        <div class="upload_box webuploader-container" id="upload3_no" style="visibility: visible;"><div class="webuploader-pick">
-                            <div class="webuploader-pick">
-                                <div class="no_upload_pic">
-                                    <a href="#this"> <img src="/public/images/wap/add_pic.png"></a>
-                                </div>
-                                <input id="picupload3" name="picupload3" type="hidden">
-                            </div>
-                            <div id="rt_rt_19ti7cr5o9o31hv51ksee3f6ik18" style="position: absolute; top: 0px; left: 0px; width: 102px; height: 102px; overflow: hidden; bottom: auto; right: auto;">
-                                <input type="file" name="file" class="webuploader-element-invisible" id="btnPickfiles" multiple="multiple" accept="image/*"><label style="opacity: 0; width: 100%; height: 100%; display: block; cursor: pointer; background: rgb(255, 255, 255);"></label>
-                            </div>
-                        </div><div id="rt_rt_1cslunst01ft4t7c2dpk3rguk7" style="position: absolute; top: 0px; left: 0px; width: 202px; height: 205px; overflow: hidden; bottom: auto; right: auto;"><input type="file" name="file" class="webuploader-element-invisible" multiple="multiple" accept="image/jpg,image/jpeg,image/png"><label style="opacity: 0; width: 100%; height: 100%; display: block; cursor: pointer; background: rgb(255, 255, 255);"></label></div></div>
-                    </div>
-
+                <textarea rows="5" cols="100" maxlength="200" id="txtGoodCommentWords" name='txtGoodCommentWords'></textarea><br>
+                <strong style="color:mediumvioletred">图片：</strong>
+                <input id='token' name='token' type='hidden' value=''/>
                 <br>
-
-                    <button type="submit" class='btn bg-maroon margin' name='button'>发布
-                    </button>                
+                <ul>
+                    <li>
+                        <label for="bucket">图片1:</label><input type='hidden' id = 'but1' name = 'but1'>
+                        <img id = 'img1' src="/public/nullimage.png">
+                        <input id="file1" name="file" class="ipt" type="file"  onchange='clickqiniu(this.id)'/>
+                    </li>
+                    <li>
+                        <label for="bucket">图片2:</label><input type='hidden' id = 'but2' name = 'but2'>
+                        <img id = 'img2' src="/public/nullimage.png">
+                        <input id="file2" name="file" class="ipt" type="file"  onchange='clickqiniu(this.id)'/>
+                    </li>
+                    <li>
+                        <label for="bucket">图片3:</label><input type='hidden' id = 'but3' name = 'but3'>
+                        <img id = 'img3' src="/public/nullimage.png">
+                        <input id="file3" name="file" class="ipt" type="file"  onchange='clickqiniu(this.id)'/>
+                    </li>
+                    <li>
+                        <label for="bucket">图片4:</label><input type='hidden' id = 'but4' name = 'but4'>
+                        <img id = 'img4' src="/public/nullimage.png">
+                        <input id="file4" name="file" class="ipt" type="file"  onchange='clickqiniu(this.id)'/>
+                    </li>
+                    <li>
+                        <label for="bucket">图片5:</label><input type='hidden' id = 'but5' name = 'but5'>
+                        <img id = 'img5' src="/public/nullimage.png">
+                        <input id="file5" name="file" class="ipt" type="file"  onchange='clickqiniu(this.id)'/>
+                    </li>
+                    <li>
+                        <input id="btn_upload" type="submit" value="提交">
+                    </li>
+                    <div id="progressbar"><div class="progress-label"></div></div>
+                </ul>
             </div><br/>
                 </form>
+
+
+
+
+
+
+
+
+
+
 
         </div>
     </div>
