--- a/app/view/menu/section.ejs
+++ b/app/view/menu/section.ejs
@@ -11,7 +11,7 @@
                 </a>
             </li>
             <li>
-                <a href="/sell/productpost">
+                <a href="/sell/createtask">
                     <i class="fa fa-th"></i> <span>发布试用</span>
                     <span class="pull-right-container">
               <small class="label pull-right bg-green">Hot</small>
@@ -19,7 +19,7 @@
                 </a>
             </li>
             <li>
-                <a href="/sell/productcomment">
+                <a href="/sell/taskcomment">
                     <i class="fa fa-th"></i> <span>试用点评</span>
                     <span class="pull-right-container">
               <small class="label pull-right bg-green">Hot</small>
@@ -27,7 +27,7 @@
                 </a>
             </li>
             <li>
-                <a href="/sell/productcommentmanager">
+                <a href="/sell/taskcommentmanager">
                     <i class="fa fa-th"></i> <span>点评管理</span>
                     <span class="pull-right-container">
               <small class="label pull-right bg-green">Hot</small>
@@ -35,7 +35,7 @@
                 </a>
             </li>
             <li>
-                <a href="/sell/productmanager">
+                <a href="/sell/taskmanager">
                     <i class="fa fa-th"></i> <span>试用管理</span>
                     <span class="pull-right-container">
             </span>
