--- a/app/view/sellTaskCommentManager.ejs
+++ b/app/view/sellTaskCommentManager.ejs
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 
 <head>
@@ -28,28 +27,48 @@
     <link rel="stylesheet" href="/public/adminLTE/dist/css/AdminLTE.min.css">
     <link rel="stylesheet" href="/public/adminLTE/dist/css/skins/_all-skins.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="/public/css/sellTaskManager.css">
+    <link rel="stylesheet" href="/public/css/widget.css">
+    <link rel="stylesheet" href="/public/css/common.css">
+    <link rel="stylesheet" href="/public/css/reset.css">
+    <link rel="stylesheet" href="/public/css/frame.css">
     <script src="/public/js/main.js"></script>
-    <script> 
+    <script>
+    //获取店铺名
     window.onload = function(){
         ajaxGetshop()
-        window.setInterval(gettaskvalues, 1000);
-    }
+        ajaxGetTaskList('',0,0,1,10,'','') //任务属性、店铺、产品、页数、读取数量、时间1和2
+        //window.setInterval(gettaskvalues, 1000);
+        }
+    function ClickAjaxGetTaskList(sendPage){
+            console.log('sendPage:'+sendPage)
+            if(sendPage==undefined){
+                let page = document.getElementById('nowpage').value
+            }else{
+                let page = sendPage
+            }
+            let taskSort = document.getElementById('taskSort').value
+            let TimeStart = document.getElementById('TimeStart').value
+            let TimeEnd = document.getElementById('TimeEnd').value
+            let SubSelectproduct = document.getElementById('SubSelectproduct').value
+            let Selectshop = document.getElementById('Selectshop').value
+            ajaxGetTaskList(taskSort,Selectshop,SubSelectproduct,page,10,TimeStart,TimeEnd)
+        }
     </script>
-
-    <style>
-        .UrlTitle {
-            padding: 25px;
-            display:inline;
-            font-size:30;
-        }
-        .geturl{
-            width: 500px;
-            display:inline;
-        }
-        .geturlclass{
-            display:inline;
-        }
-    </style>
+        <style>
+            .UrlTitle {
+                padding: 25px;
+                display:inline;
+                font-size:30;
+            }
+            .geturl{
+                width: 500px;
+                display:inline;
+            }
+            .geturlclass{
+                display:inline;
+            }
+        </style>
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
@@ -62,48 +81,52 @@
     <div class="content-wrapper">
         <div class="box box-warning">
             <div class="box-header with-border">
-                <h3 class="box-title">首页</h3>
+                <h3 class="box-title">试用任务中心</h3>
             </div>
                 <!-- /.box-header -->
-                <div id='selectproductdiv'>
-                <form id="msform1" method="post" action="#">
-                <strong style="color:mediumvioletred">类型：</strong>
-                <label><input type="radio" name="event" value="1" checked="checked" >
-                    试用追评  </label>
-                <label><input type="radio" name="event" value="2" onclick="">
-                    试用好评  </label>
-                    <br>
-                           <%- include menu/selectShopProduct %>
-                </div>
-            <div name="moneyClass">
-                <strong style="color:mediumvioletred">评价：</strong><br>
-                <textarea rows="5" cols="100" maxlength="200" id="txtGoodCommentWords"></textarea><br>
-                <strong style="color:mediumvioletred">图片：</strong><br>
-            <label for="avatar">请选择5张图片:</label>
-                <input type="file"
-                       id="avatar" name="avatar"
-                       accept="image/png, image/jpeg"><br>
-                <input type="file"
-                       id="avatar" name="avatar"
-                       accept="image/png, image/jpeg"><br>
-                <input type="file"
-                       id="avatar" name="avatar"
-                       accept="image/png, image/jpeg"><br>
-                <input type="file"
-                       id="avatar" name="avatar"
-                       accept="image/png, image/jpeg"><br>
-                <input type="file"
-                       id="avatar" name="avatar"
-                       accept="image/png, image/jpeg"><br>
-               <br>
-                    <button type="submit" class='btn bg-maroon margin' name='button'>发布
-                    </button>                
-            </div><br/>
-                </form>
 
+                <div class="area-main">
+    <div class="contentCard">
+    <strong style="color:mediumvioletred">任务：</strong>
+    <select id='taskSort' name='taskSort' onchange='ClickAjaxGetTaskList()'>
+        <option value=''>进行中的任务</option>
+        <option value='1'>待支付任务</option>
+        <option value='2'>已完成的任务</option>
+        <option value='3'>已经取消的任务</option>
+        <option value='4'>全部任务</option>
+        <option value='5'>关闭中的任务</option>
+    </select>
+            <%- include menu/selectShopProduct %>
 
+        <div class="taskFilterPanel mt10">
+<!--             <span class="floatLeft mr10" title="任务号">任务号</span>
+            <input type="text" id="taskId" class="floatLeft mr10 inputText"> -->
+            <span>时间</span><input type="date" id='TimeStart' value="" min="2017-09-16"/>
+                -<input type="date" id='TimeEnd' value="" min="2017-09-16"/>
+            <button style="height: 20px; color:red" onclick='ClickAjaxGetTaskList()' >查询</button>
 
+        </span>
+        </div>
 
+<div id="taskContainer">  
+
+</div>
+
+            <!--这里是分页区域-->
+
+<div class="row">
+
+    <div class="col-sm-7">
+        <div class="dataTables_paginate paging_simple_numbers" id="example2_paginate">
+            <ul class="pagination" id='pagination'>
+
+            </ul>
+        </div>
+    </div>
+</div>
+
+</div>
+</div>
 
 
 
@@ -117,4 +140,3 @@
 </body>
 
 </html>
-
