END comment manager view debug 1

--- a/app/view/menu/section.ejs
+++ b/app/view/menu/section.ejs
@@ -20,15 +20,7 @@
             </li>
             <li>
                 <a href="/sell/taskcomment">
-                    <i class="fa fa-th"></i> <span>试用点评</span>
-                    <span class="pull-right-container">
-              <small class="label pull-right bg-green">Hot</small>
-            </span>
-                </a>
-            </li>
-            <li>
-                <a href="/sell/taskcommentmanager">
-                    <i class="fa fa-th"></i> <span>点评管理</span>
+                    <i class="fa fa-th"></i> <span>发布报告</span>
                     <span class="pull-right-container">
               <small class="label pull-right bg-green">Hot</small>
             </span>
@@ -37,6 +29,13 @@
             <li>
                 <a href="/sell/taskmanager">
                     <i class="fa fa-th"></i> <span>试用管理</span>
+                    <span class="pull-right-container">
+            </span>
+                </a>
+            </li>
+            <li>
+                <a href="/sell/taskcommentmanager">
+                    <i class="fa fa-th"></i> <span>报告管理</span>
                     <span class="pull-right-container">
             </span>
                 </a>
