--- a/app/view/sellTaskPost.ejs
+++ b/app/view/sellTaskPost.ejs
@@ -199,7 +199,7 @@
                 <span style="color:mediumvioletred"><%= shopname %></span>
                 <span style="color:red;"><%= message %></span><br>
                 <!-- /.box-header -->
-                <form method="post" action="#">
+                <form method="post">
                 <strong style="color:mediumvioletred">类型：</strong>
                 <label><input type="radio" name="event" value="1" checked="checked" onclick="Moneytry()">
                     红包试用  </label>
