--- a/app/view/menu/section.ejs
+++ b/app/view/menu/section.ejs
@@ -12,7 +12,7 @@
             </li>
             <li>
                 <a href="/sell/createtask">
-                    <i class="fa fa-th"></i> <span>发布试用</span>
+                    <i class="fa fa-th"></i> <span>发布试用报告</span>
                     <span class="pull-right-container">
               <small class="label pull-right bg-green">Hot</small>
             </span>
@@ -20,7 +20,7 @@
             </li>
             <li>
                 <a href="/sell/taskcomment">
-                    <i class="fa fa-th"></i> <span>发布报告</span>
+                    <i class="fa fa-th"></i> <span>发布评价报告</span>
                     <span class="pull-right-container">
               <small class="label pull-right bg-green">Hot</small>
             </span>
