--- a/app/view/menu/section.ejs
+++ b/app/view/menu/section.ejs
@@ -3,13 +3,7 @@
     <section class="sidebar">
         <ul class="sidebar-menu" data-widget="tree">
             <!-- 导航按钮-->
-            <li>
-                <a href="/sell">
-                    <i class="fa fa-th"></i> <span>卖家中心</span>
-                    <span class="pull-right-container">
-            </span>
-                </a>
-            </li>
+
             <li>
                 <a href="/sell/createtask">
                     <i class="fa fa-th"></i> <span>发布试用报告</span>
@@ -42,6 +36,13 @@
             </li>
             <li>
                 <a href="/sell/topup">
+                    <i class="fa fa-th"></i> <span>我要充值</span>
+                    <span class="pull-right-container">
+            </span>
+                </a>
+            </li>
+            <li>
+                <a href="/sell/finance">
                     <i class="fa fa-th"></i> <span>财富中心</span>
                     <span class="pull-right-container">
             </span>
