--- a/app/view/sellTaskCommentManager.ejs
+++ b/app/view/sellTaskCommentManager.ejs
@@ -82,7 +82,7 @@
     <div class="content-wrapper">
         <div class="box box-warning">
             <div class="box-header with-border">
-                <h3 class="box-title">试用任务中心</h3>
+                <h3 class="box-title">试用报告中心</h3>
             </div>
                 <!-- /.box-header -->
 
