--- a/app/view/sellLogin.ejs
+++ b/app/view/sellLogin.ejs
@@ -1,28 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>折试试 | Login</title>
-  <!-- Tell the browser to be responsive to screen width -->
-  <!-- Bootstrap 3.3.7 -->
-<!--   <link rel="stylesheet" href="/public/adminLTE/bower_components/bootstrap/dist/css/bootstrap.min.css">
- -->  
-  <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/public/adminLTE/dist/css/AdminLTE.min.css">
-  <!-- iCheck -->
+<meta charset="utf-8">
+<title>折试试 | Login</title>
 
-<!-- jQuery 3 -->
-<!-- Bootstrap 3.3.7 -->
-<!-- <script src="/public/adminLTE/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
- -->
-<!-- <script src="https://cdn.bootcss.com/twitter-bootstrap/4.2.1/js/bootstrap.min.js"></script>
- -->
+<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="/public/css/Adminlte.min.css">
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 
-<!-- <script src="/public/adminLTE/bower_components/jquery/dist/jquery.min.js"></script>
- -->
-<!-- iCheck -->
-<script src="/public/adminLTE/plugins/iCheck/icheck.min.js"></script>
 <script>
   // $(function () {
   //   $('input').iCheck({
